alteração de fundo, nomes, adição do 25' no texto h1 e etc

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Champions - Liga de Vendas</title>
+    <title>Super Champions 25' - Liga de Vendas</title>
     <link rel="shortcut icon" href="assets/WhatsApp Image 2025-05-28 at 14.06.23.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .champions-background {
+            background: url('assets/_SUPER\ CHAMPIONS\ 25\ CONSULTORES\ \(1\).png') no-repeat center center fixed;
+            background-size: cover;
+            min-height: 100vh;
+            position: relative;
+        }
+    </style>
 </head>
 <body>
     <div class="champions-background">
@@ -15,7 +23,7 @@
                 <div class="trophy">
                     <i class="fas fa-trophy"></i>
                 </div>
-                <h1>Super Champions</h1>
+                <h1>Super Champions 25'</h1>
                 <p>Liga de Vendas 2025</p>
             </header>
             
