tentativa 2 da imagem de fundo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="assets/WhatsApp Image 2025-05-28 at 14.06.23.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- trazendo para o indexhtml a imagem de fundo para ver se puxa depois do commit -->
     <style>
         .champions-background {
             background: url('assets/_SUPER\ CHAMPIONS\ 25\ CONSULTORES\ \(1\).png') no-repeat center center fixed;
