alterações gerais da página, adição dos escudos, e alteração de código e redocumentação

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="shortcut icon" href="assets/WhatsApp Image 2025-05-28 at 14.06.23.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- trazendo para o indexhtml a imagem de fundo para ver se puxa depois do commit -->
     <style>
-        .champions-background {
-            background: url('assets/_SUPER\ CHAMPIONS\ 25\ CONSULTORES\ \(1\).png') no-repeat center center fixed;
-            background-size: cover;
-            min-height: 100vh;
-            position: relative;
-        }
+    .champions-background {
+        background: url('assets/_SUPER\ CHAMPIONS\ 25\ CONSULTORES\ \(1\).png') no-repeat center center fixed;
+        background-size: cover;
+        min-height: 100vh;
+        position: relative;
+    }
     </style>
 </head>
 <body>
@@ -45,9 +44,7 @@
                     <div class="stats">D</div>
                     <div class="stats">%</div>
                 </div>
-                <div id="standings" class="standings">
-
-                </div>
+                <div id="standings" class="standings"></div>
             </div>
             
             <footer class="footer">
@@ -56,7 +53,6 @@
             </footer>
         </div>
     </div>
-    <!-- https://script.google.com/macros/s/AKfycby0Moqf4MNfeWtD-CxxvTQdlumBS3D-xfc_7q9Rn8rpv_5ly9AoKg3ZB5H975mRtCHYvg/exec -->
     <script src="assets/script.js"></script>
 </body>
 </html>
