trocando % com J de jogos jogados

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="stats">V</div>
                     <div class="stats">E</div>
                     <div class="stats">D</div>
-                    <div class="stats">%</div>
+                    <div class="stats">J</div>
                 </div>
                 <div id="standings" class="standings"></div>
             </div>
